# penrose-wm

./: Cargo.toml  flake.nix
